<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eks_game_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="yqtrack.ap.screens.SettingsFrag">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_credits"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip100"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/_100" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip500"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/_500" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1000"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/_1000" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/enable_vibration"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/checkVibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/check_box_selector"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/start"
        android:textColor="@color/white" />
</LinearLayout>